--- a/notebooks/sample.ipynb
+++ b/notebooks/sample.ipynb
@@ -38,7 +38,7 @@
    ],
    "source": [
     "lc.scatter()\n",
-    "plt.savefig(os.path.join(os.pardir, 'figures/sample.pdf'))"
+    "plt.savefig('sample.pdf')"
    ]
   }
  ],
