make sure submodules are synced

--- a/install
+++ b/install
@@ -5,11 +5,11 @@ set -e
 CONFIG="install.conf.yaml"
 NEXTEX_DIR="nextex.cls"
 
-NEXTEX_BIN="bin/nextex.cls"
+NEXTEX_BIN="bin/nextex"
 BASEDIR="$(cd "$(dirname "${BASH_SOURCE[0]}")" && pwd)"
 
 cd "${BASEDIR}"
-git -C "${NEXTEX_DIR}" submodule sync --quiet --recursive
+git submodule sync
 git submodule update --init --recursive "${NEXTEX_DIR}"
 
 "${BASEDIR}/${NEXTEX_DIR}/${NEXTEX_BIN}" -d "${BASEDIR}" -c "${CONFIG}" "${@}"
