--- a/notebooks/figures/template.ipynb
+++ b/notebooks/figures/template.ipynb
@@ -74,7 +74,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Supplimentary Figures\n",
+    "# Supplemental Figures\n",
     "Optionally include alternative versions or additional figures."
    ]
   },
